// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadForm expect to render 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    isRequired={true}
    isValid={true}
    label="Inventory data file"
  >
    <Dropzone
      accept={
        Array [
          "application/zip",
          "application/json",
          "application/gzip",
          "application/tar",
          "application/tar+gzip",
        ]
      }
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    isRequired={true}
    isValid={true}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    isValid={true}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    isRequired={true}
    isValid={true}
    label="Year-over-year growth rate for new hypervisors"
  >
    <div
      className="pf-l-gallery"
    >
      <div>
        <InputGroup>
          <TextInput
            aria-describedby="Year-over-year growth rate for new hypervisors"
            aria-label={null}
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isDisabled={false}
            isReadOnly={false}
            isRequired={true}
            isValid={true}
            name="yearOverYearGrowthRatePercentage"
            onBlur={[MockFunction]}
            onChange={[Function]}
            type="number"
          />
          <InputGroupText
            className="percentage-box"
          >
            %
          </InputGroupText>
        </InputGroup>
      </div>
    </div>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    gutter="sm"
  >
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        isValid={true}
        label="Percentage of hypervisors migrated each year"
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 1
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear1"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId=""
        isValid={true}
        label=""
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 2
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear2"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId=""
        isValid={true}
        label=""
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 3
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Button
      disabled={true}
      isDisabled={true}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;

exports[`UploadForm expect to render errors 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Inventory data file"
  >
    <Dropzone
      accept={
        Array [
          "application/zip",
          "application/json",
          "application/gzip",
          "application/tar",
          "application/tar+gzip",
        ]
      }
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={false}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    helperTextInvalid="Field value invalid"
    isValid={false}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={false}
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Year-over-year growth rate for new hypervisors"
  >
    <div
      className="pf-l-gallery"
    >
      <div>
        <InputGroup>
          <TextInput
            aria-describedby="Year-over-year growth rate for new hypervisors"
            aria-label={null}
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isDisabled={false}
            isReadOnly={false}
            isRequired={true}
            isValid={false}
            name="yearOverYearGrowthRatePercentage"
            onBlur={[MockFunction]}
            onChange={[Function]}
            type="number"
          />
          <InputGroupText
            className="percentage-box"
          >
            %
          </InputGroupText>
        </InputGroup>
      </div>
    </div>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    gutter="sm"
  >
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        helperTextInvalid="Field value invalid"
        isValid={false}
        label="Percentage of hypervisors migrated each year"
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 1
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={false}
                name="percentageOfHypervisorsMigratedOnYear1"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId=""
        helperTextInvalid="Field value invalid"
        isValid={false}
        label=""
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 2
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={false}
                name="percentageOfHypervisorsMigratedOnYear2"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      isFilled={false}
    >
      <FormGroup
        fieldId=""
        helperTextInvalid="Field value invalid"
        isValid={false}
        label=""
      >
        <div
          className="pf-l-gallery"
        >
          <div>
            <InputGroup>
              <InputGroupText
                className="year-box"
              >
                Year 3
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onBlur={[MockFunction]}
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className="percentage-box"
              >
                %
              </InputGroupText>
            </InputGroup>
          </div>
        </div>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Button
      disabled={true}
      isDisabled={true}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;
